<resources>
    <string name="app_name">AndroidFundamental</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_finished">Finished</string>
    <string name="menu_favorite">Favorite</string>
    <string name="searchbar_hint">Dev Coach</string>

    <string name="image_event">Gambar Event</string>
    <string name="nama_acara">DevCoach 174: Flutter | Bentangkan Sayap Kreativitasmu dengan Flutter Desktop</string>
    <string name="finished_event">Finished Events</string>
    <string name="upcoming_event">Upcoming Events</string>
    <string name="dicoding_event">Dicoding Event </string>
    <string name="penyelenggara">Diselenggarakan oleh : </string>
    <string name="register">Register </string>
    <string name="informasi">Informasi : </string>
    <string name="deskripsi">ini informasi deskripsi </string>
    <string name="sisa_kouta">Sisa Kouta : </string>
    <string name="kouta">150 </string>
    <string name="waktu_acara">Waktu acara </string>
    <string name="dark_mode">Dark Mode </string>
    <string name="message_empty">Belum Ada Favorite</string>
    <string name="add_favorite">Tambah  Favorite</string>
</resources>