<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgLogoHome"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_event"
            android:src="@drawable/dicoding_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/judulEventHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nama_acara"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLogoHome"
            app:layout_constraintTop_toTopOf="@+id/imgLogoHome" />

        <TextView
            android:layout_marginStart="8dp"
            android:id="@+id/lb_penyelenggara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penyelenggara"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imgLogoHome"
            app:layout_constraintTop_toBottomOf="@+id/judulEventHome" />

        <TextView
            android:id="@+id/tv_diselengara"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dicoding_event"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLogoHome"
            app:layout_constraintTop_toBottomOf="@+id/lb_penyelenggara" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>